--- a/12_CSS3Animations.html
+++ b/12_CSS3Animations.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>JavaScript Objects</title>
+    <title>JavaScript Animation</title>
     <style>
       /* * {
             border: red solid 1px;
@@ -144,7 +144,7 @@
   </head>
 
   <body>
-    <h1>CSS Transform</h1>
+    <h1>CSS Animation</h1>
 
     <div id="listenAudio" hidden></div>
     <div class="formulary">
