--- a/Project261.html
+++ b/Project261.html
@@ -516,7 +516,7 @@
       };
 
       let maestro = {
-        formName: "Datos del estudiante",
+        formName: "Passenger information",
         style: FORM_STYLES.STYLE1,
         //style: FORM_STYLES.NONE,
         //style: FORM_STYLES.STYLE2,
